--- a/index.css
+++ b/index.css
@@ -1,50 +1,46 @@
-.row img {
-    width: 100%;
+*{
+    margin: 0%;
+    padding: 0%;
 }
-
-.menu a {
+.banner img{
+    width: 100%;   
+}
+.JPG img{
+    width: 25%;
+    margin-left: 10px;
+}
+.menu li{
     text-decoration: none;
-    color: white;
-    margin: 10px;
+    font-size: 17px;
+    padding: 0 10px;    
+}
+body {
+    background-color:#333333;
+    text-decoration: none;
+    color: #DCDCDC;
+}
+.header{
+    color:#C6E2FF;
+}
+.header h1{
+    text-align:center; 
 }
 
-.content h1 {
-    margin-top: 40px;
-}
 
-.text2 p {
-    margin-top: 20px;
-}
-
-.row img {
-    padding-bottom: 50px;
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-}
-.banner-img{
-    display: none;
-}
-    @media only screen and (min-width: 987px) {
-    /* For desktop: */
-   
-  .banner-img{
+/*for destop*/
+@media only screen and (min-width: 987px){
+    .banner-img{
         display: block;
         width: 100%;
-        }
-        .banner h1{
-            position: absolute; 
-            margin-top: 150px;   
-            margin-left: 50px;
-            color: white;
-        }
-        .banner p{
-            position: absolute;
-            margin-top: 200px;
-            margin-left: 50px;
-            color: white;
-        }
     }
-    .row1{
-        display: grid;
-        grid-template-columns: 33% 33% 33%;
+    .row h2{
+        text-decoration: underline;
     }
+    
+}
+
+
+
+
+
+     
